# kcl-eresearch-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/kcl_er_mcp/: __init__.py  __main__.py  auth.py  observability.py  portal.py  server.py  ssh_helper.py  vpn.py
tests/: test_ssh_helper.py
